[package]
name = "hyper-tls"
version = "0.2.1"
description = "Default TLS implementation for use with hyper"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
keywords = ["hyper", "tls", "http", "https", "ssl"]
homepage = "https://hyper.rs"
repository = "https://github.com/hyperium/hyper-tls"
documentation = "https://docs.rs/hyper-tls"

[dependencies]
bytes = "0.4"
futures = "0.1.21"
native-tls = { git = "https://github.com/mehcode/rust-native-tls.git", rev = "96780f7b6f765930c0e5a6ba67586b90b897dd85" }
hyper = "0.12"
tokio-io = "0.1"
tokio-tls  = { git = "https://github.com/aep/tokio-tls.git", branch="native-tls-0.2", default-features = false }


[dev-dependencies]
tokio = "0.1.5"

